static/css/main.css
/*Inicializaciones e import*/
/* Design on mobile first methodology */
@import '/static/css/var.css';
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--rubik-font);
    display: grid;
    grid-template-rows: repeat(7, 250px);
    gap: 25px;
    justify-items: center;
    justify-content: center;
    align-items: center;
    background-color: var(--blue-very-dark-neutral);
    color: #ffffff;
}

/* Profile section */

.section-profile {
    margin-top: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 0.6rem;
    background-color: var(--blue-dark-neutral);
    width: 300px;
    height: 150px;
    border-radius: 8px;
}

.section-profile .information-profile {
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    text-align: left;
    justify-content: center;
    background-color: var(--blue-primary);
    border-radius: 8px;
    width: inherit;
    height: 120px;
}

.section-profile .profile-image {
    display: inline-block;
    background-position: center;
    background-repeat: no-repeat;
    width: 60px;
    height: 60px;
    border-radius: 100%;
    border: 1px #ffffff solid ;
    margin-right: 16px;
}

.section-profile .p-profile {
    display: flex;
    flex-direction: column;
    align-content: center;
    text-align: left;
}

.p-profile :nth-child(1) {
    font-size: 0.6rem;
    font-weight: 300;
    color: var(--blue-pale-neutral);
}
.p-profile :nth-child(2) {
    font-size: 1rem;
    font-weight: 300;
}
.buttons {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: inherit;
}
.buttons button{
    cursor: pointer;
    background-color: transparent;
    font-size: 0.6rem;
    color: var(--blue-pale-neutral);
    border: none;
    margin: 16px;
}
.btn:active{
    color: white;
    font-size: 0.7rem;
}

/* cards section */

.container-task {
    display: grid;
    position: relative;
    height: 95px;
    min-width: 300px;
    max-width: 770px;
    width: 300px;
    border-radius: 16px;

    margin-bottom: 24px;
    background-repeat: no-repeat;
    background-size: 70px;
    background-position: right;
    background-position-y: -15px;
}


.div-task {
    display: flex;
    align-items: center;
    justify-content: space-around;
    position: absolute;
    background-color: var(--blue-dark-neutral);
    width: inherit;
    height: 70px;
    top: 10px;
    margin-top: 16px;
    border-radius: 16px;
}
.div-task .div-task-p {
    display: flex;
    flex-direction: column;
    align-content: center;
}

.div-task-p .div-task-p-title {
    font-size: 0.6rem;
    font-weight: 400;
    margin-bottom: 6px;
}

.div-task-p-current  {
    font-size: 1rem;
    font-weight: 400;
}
.progress {
    display: flex;
    flex-direction: column;
    justify-items: flex-end;
}
.progress .progress-image {
    width: 15px;
    height: 5px;
    color: var(--blue-pale-neutral);
    margin-bottom: 10px;
}
.progress .progress-p {
    color: var(--blue-pale-neutral);
    font-size: 0.6rem;
    font-weight: 300;
}

/* Footer */
.attribution {
    display: flex; 
    height: 100px;
    align-items: flex-start;
    font-size: 11px;
    text-align: center;
}
.attribution a {
    color: hsl(228, 45%, 44%);
}

@media only screen and (min-width: 1000px) {
    body {
        display: flex;
        align-items: center;
        margin-top: calc(100% - 80%);
        align-content: center;
    }
    .section-profile {
        height: 440px;
        width: 200px;
        margin-left: 40px;
        margin-bottom: 15px;
    }
    .section-profile .information-profile {
        height: 280px;
    }
    .buttons {
        display: grid;
        grid-template-columns: 1fr;
        justify-items: left;
    }
    .section-tasks {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        align-content: center;
    }
    .container-task {
        display: block;
        height: 200px;
    }
    .div-task {
        display: flex;
        align-items: center;
        height: 150px;
        margin-top: 50px;
    }
}

